# Self_Balancing_Storage

./: .gitignore  README.md  pyproject.toml
demo/: full_v2_demo.py  per_chunk_divergence.py  workload.py
scripts/: populate_ui.py  simulate_load.py
self_balancing_storage/: chunk.py  config.py  main.py  runtime.py  store.py  types.py
self_balancing_storage/api/: app.py  models.py  routes_admin.py  routes_events.py  routes_logs.py  routes_query.py
self_balancing_storage/engine/: actions.py  decisions.py  engine.py  stability.py
self_balancing_storage/indexes/: base.py  bloom.py  hash_index.py  skip_index.py
self_balancing_storage/observability/: event_broker.py
self_balancing_storage/persistence/: chunk_reader.py  chunk_writer.py  recovery.py  wal.py
self_balancing_storage/query/: ast.py  executor.py  lexer.py  parser.py  planner.py
self_balancing_storage/tracker/: heatmap.py  primitives.py  tracker.py
tests/: test_api.py  test_bloom.py  test_chunk.py  test_engine_decisions.py  test_engine_v2.py  test_event_broker.py  test_hash_index.py  test_heatmap.py  test_integration.py  test_persistence.py  test_query_executor.py  test_query_parser.py  test_recovery.py  test_skip_index.py  test_tracker.py  test_tracker_primitives.py  test_wal.py
ui/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
ui/src/: App.tsx
ui/src/api/: client.ts  hooks.ts  types.ts
ui/src/components/: ChunkCell.tsx  DecisionItem.tsx  DecisionsFeed.tsx  HeatmapGrid.tsx  IndexTable.tsx  Sparkline.tsx  StatCard.tsx  TopPredicatesBar.tsx
(+21 files in other folders)
