[project]
name = "self-balancing-storage"
version = "0.1.0"
description = "Self-balancing log storage prototype"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "bitarray>=3.8.1",
    "fastapi>=0.136.1",
    "mmh3>=5.2.1",
    "psutil>=7.2.2",
    "sse-starlette>=3.4.1",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
    "types-psutil>=7.2.2.20260408",
]
